--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -5,7 +5,8 @@
 }
 
 .about__me {
-  width: 100%;
+  width: 70%;
+  margin-left: 10rem;
   aspect-ratio: 1/1;
   border-radius: 2rem;
   background: linear-gradient(
@@ -35,7 +36,7 @@
     gap: 1.5rem;
 }
 
-.about__cards {
+.about__card {
     background: var(--color-bg-variant);
     border: 1px solid transparent;
     border-radius: 1rem;
@@ -71,6 +72,10 @@
     color: var(--color-light);
 }
 
+.about__content {
+    margin-right: 10rem;
+}
+
 /* ======================== MEDIA QUERIES (MEDIUM DEVICES) ======================== */
 
 @media screen and (max-width: 1024px) {
@@ -85,6 +90,9 @@
 
     .about__content p {
         margin: 1rem 0 1.5rem;
+    }
+    .about__content {
+        margin-right: 0;
     }
 }
 
@@ -105,5 +113,9 @@ text-align: center;
 
 .about__content p {
     margin: 1.5rem 0;
+}
+
+.about__content {
+    margin-right: 0;
 }
 }
