--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -27,6 +27,7 @@ header {
     gap: 0.8rem;
     position: absolute;
     left: 0;
+    margin-left: 5rem ;
     bottom: 3rem;
 }
 
@@ -40,14 +41,14 @@ header {
 /* ========================== PROFILE IMG ========================== */
 .me {
     background: linear-gradient(var(--color-primary), transparent);
-    width: 20rem;
-    height: 30rem;
+    width: 24rem;
+    height: 28rem;
     position: absolute;
-    left: calc(50% - 10rem); /* TODO centers the profile picture */
+    left: calc(50% - 12rem); /* TODO centers the profile picture */
     margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
+    border-radius: 50%;
     overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    padding: 5rem 4rem 4rem 4rem;
 }
 
 /* .prof-pic {
@@ -65,6 +66,7 @@ header {
     transform: rotate(90deg);
     font-weight: 300;
     font-size: 0.9rem;
+    margin-right: 5rem;
 }
 
 /* ======================== MEDIA QUERIES (MEDIUM DEVICES) ======================== */
