--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --transition: all 400ms ease;
   --conatiner-width-lg: 75%;
   --conatiner-width-md: 86%;
-  --conatiner-width-ms: 90%%;
+  --conatiner-width-sm: 90%%;
 }
 
 html {
@@ -61,7 +61,6 @@ h1 {
 
 section {
   margin-top: 8rem;
-  height: 100vh;
 }
 
 section > h2,
