--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,63 +1,92 @@
 .portfolio__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .portfolio__item {
-    background: var(--color-bg-variant);
-    padding: 1.3rem;
-    border-radius: 2rem;
-    border: 1px solid transparent;
-    transition: var(--transition);
+  background: var(--color-bg-variant);
+  padding: 1.3rem;
+  border-radius: 2rem;
+  border: 1px solid transparent;
+  transition: var(--transition);
+  margin:0 30px 30px ;
 }
 
 .portfolio__item:hover {
-    border-color: var(--color-primary-variant);
-    background: transparent;
+  border-color: var(--color-white);
+  background: transparent;
 }
 
 .portfolio__item-image {
-    border-radius: 1.5rem;
-    overflow: hidden;
+  border-radius: 1.5rem;
+  overflow: hidden;
+}
+
+.portfolio__item-image img {
+  border-radius: 1.5rem;
+  overflow: hidden;
+  max-width: 500px;
+  max-height: 350px;
+  min-height: 350px;
 }
 
 .portfolio__item h3 {
-    margin: 1.2rem 0 2rem;
+  margin: 1.2rem 0 2rem;
 }
 
 .portfolio__item-cta {
-display: flex;
-gap: 1rem;
-margin-bottom: 1rem;
-flex-direction: column;
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  flex-direction: column;
 }
 
-.portfolio-styles {
+.portfolio-btn {
+    margin-top: 2.5rem;
     display: flex;
-    flex-direction: row;
+    gap: 1.2rem;
+}
+
+.btn-white {
+    width: max-content;
+    display: inline-block;
+    color: var(--color-white);
+    padding: 0.75rem 1.2rem;
+    border-radius: 0.4rem;
+    cursor: pointer;
+    border: 1px solid var(--color-white);
+    transition: var(--transition);
+}
+
+.btn-white:hover {
+    background:var(--color-white);
+    color: var(--color-bg);
+    border-color: transparent;
+}
+
+.project-description {
+    margin-bottom: 25px;
 }
 
 /* ======================== MEDIA QUERIES (MEDIUM DEVICES) ======================== */
 
 @media screen and (max-width: 1024px) {
-    .portfolio__container{
-        grid-template-columns: 1fr 1fr;
-        gap: 1.2rem;
-    }
+  .portfolio__container {
+    grid-template-columns: 1fr 1fr;
+    gap: 1.2rem;
+  }
 }
 
 /* ======================== MEDIA QUERIES (SMALL DEVICES) ======================== */
 
 @media screen and (max-width: 600px) {
-    .portfolio__container {
-        grid-template-columns: 1fr;
-        gap: 1rem;
-    }
+  .portfolio__container {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
 }
 
 .project-icons svg {
-    min-height: 50px;
-    min-width: 50px;
+  min-height: 50px;
+  min-width: 50px;
 }
-
