edited about styling

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -54,17 +54,17 @@
 .about__icon {
     color: var(--color-primary)
     ;
-    font-size: 1.4rem;
-    margin-bottom: 1rem;
+    font-size: 2rem;
+    margin-bottom: .7rem;
 }
 
 .about__card h5 {
-    font-size: 0.95rem;
+    font-size: 1rem;
 }
 
 .about__card small {
-    font-size: 0.7rem;
-    color: var(--color-light);
+    font-size: .9rem;
+    color: var(--color-white);
 }
 
 .about__content p {
@@ -75,6 +75,7 @@
 .about__content {
     margin-right: 10rem;
 }
+
 
 /* ======================== MEDIA QUERIES (MEDIUM DEVICES) ======================== */
 
