--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,6 +8,7 @@ header {
     text-align: center;
     height: 100%;
     position: relative;
+    margin-bottom: 20rem;
 }
 
 /* ========================== CTA ========================== */
